syntax = "proto3";

package protorpc;

import "gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message Request { 
    string     ServiceMethod = 1 [(gogoproto.nullable) = false];
    uint64     Seq = 2 [(gogoproto.nullable) = false];
    uint32     MethodId = 3 [(gogoproto.nullable) = false];
    Request    next = 4 [(gogoproto.nullable) = true];
}

message Response { 
    string     ServiceMethod = 1 [(gogoproto.nullable) = false];
    uint64     Seq = 2 [(gogoproto.nullable) = false];
    string     Error = 3 [(gogoproto.nullable) = false];
    uint32     MethodId = 4 [(gogoproto.nullable) = false];
    Response   next = 5 [(gogoproto.nullable) = true];
}
