syntax = "proto3";

package protobuf;

import "gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message RequestHeader { 
    string     Method = 1 [(gogoproto.nullable) = false];
    uint64     Seq = 2 [(gogoproto.nullable) = false];
    uint32     MethodId = 3 [(gogoproto.nullable) = false];
}

message ResponseHeader { 
    string     Method = 1 [(gogoproto.nullable) = true];
    uint64     Seq = 2 [(gogoproto.nullable) = false];
    string     Error = 3 [(gogoproto.nullable) = true];
    uint32     MethodId = 4 [(gogoproto.nullable) = false];
}
